--- a/css/mobile.css
+++ b/css/mobile.css
@@ -35,25 +35,14 @@ header
 {
 	border-color: #BCA92C;
 	border-width: 2px;
-}
-
-/* 프로필 이미지 크기 확장 전 여백 공간 설정 */
-#board-info>h1
-{
-	margin-left: 70px;
-	margin-top: 3px;
 	height: 70px;
 }
 
 /* 프로필 이미지 크기 확장 */
-/* 중요! : 상단의 광고창 있을때와 없을때 사이즈 차이 완전 남.. 확인 필요.. */
-#board-info>h1>#board-info-profile-img
+#board-info h1 > #board-info-profile-img
 {
-	width: 60px;
-	height: 60px;
-	position: absolute;
-	top: 90px;
-	left: 5px;
+	width: 50px;
+	height: 50px;
 	border-radius: 100px;
 	z-index: 1;
 	border-style: solid;
@@ -64,7 +53,8 @@ header
 /* 라이브 문구 전 이미지 삽입 */
 #board-info h1 > a.badge.badge-live::before
 {
-	content: url(https://static-cdn.jtvnw.net/emoticons/v2/301732832/default/light/1.0);
+	background: url(https://static-cdn.jtvnw.net/emoticons/v2/301732832/default/light/1.0);
+	background-size: 100px;
 	width: 90px;
 }
 
