--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,6 +5,7 @@
 @import url("https://omg6.github.io/tgd-haegi/css/mobile.css");
 */
 
+
 /* 웹폰트 불러오기 (티머니 둥근바람) */
 /* 출처 : https://noonnu.cc/font_page/459 */
 @font-face
@@ -21,17 +22,63 @@ body
 	font-family: 'TmoneyRoundWindRegular';
 }
 
-/* 트게더 로고 배너 */
+
+/* 트게더 로고 배너 부분 */
 header
 {
     background: #F7F5E8; /* 로고 배너 배경 색 */
     border-bottom: 4px solid #BCA92C; /* 로고 배너 하단 구분선 색 */
 }
 
-/* 상단 배너 광고 뱃지 */
+/* 해게더 로고 삽입 */
+header>#header-area>a>h1
+{
+	/* 해바라기 그림 제거된 로고 */
+	background: url(https://cdn.discordapp.com/attachments/817410187199512678/817413426954764328/tgd-haegi-logo.png) no-repeat;
+	background-size: auto 32px;
+	width: 90px;
+}
+
+/* 좌측 메뉴 버튼 색상 변경 */
+header>#header-area>#header-bar-link
+{
+	display: inline-block;
+    color: #dbde00;
+}
+
+/* 검색 버튼 색상 변경 */
+header>#header-area>#header-search-link
+{
+	display: inline-block;
+    color: #dbde00;
+    font-size: 24;
+	padding: 0 16px 8px;
+}
+
+/* 검색 버튼 색상 변경 (검색창 활성화 후) */
+header>#header-search-bar #header-search-btn
+{
+	display: inline-block;
+    color: #dbde00;
+    font-size: 24;
+	padding: 0 16px 8px;
+}
+
+/* 검색창 설정 변경 (검색 버튼 클릭 후 상단에 표기되는 검색창) */
+header > #header-search-bar #header-search-input
+{
+	position: relative;
+    border: 3px solid #dbde00;
+    background: #fff;
+    font-size: 1.1em;
+    padding: 0.3em 0.5em;
+    border-radius: 15px;
+}
+
+/* 트게너 배너 바로 아래에 게시되는 트게더 자체 광고 문구 */
 #header-top-notice strong.notice-badge
 {
-    background: #2CE1D9; /* 광고 뱃지 배경 색 */
+    background: #2CE1D9; /* "광고" 문구의 배경 색 설정 */
 }
 
 /* 프로필 이미지 크기 확장 전 여백 공간 설정 */
@@ -68,7 +115,7 @@ header
 	content: url(https://cdn.discordapp.com/attachments/817410187199512678/817723964205694976/2_edited.png);
 }*/
 
-/* 라이브 속성 설정 및 숨기기 */
+/* 라이브 배경 설정 및 기존 문구 숨기기 */
 #board-info h1 > a.badge.badge-live
 {
 	background: rgb(255, 0, 255);
@@ -82,78 +129,33 @@ header
 	content: "⊙ 방송중";
 }
 
-/* 좌측 메뉴 버튼 색상 변경 */
-header>#header-area>#header-bar-link
-{
-	display: inline-block;
-    color: #dbde00;
-}
-
-/* 트게더 로고 삽입 */
-header>#header-area>a>h1
-{
-	/* 해바라기 그림 제거된 로고 */
-	background: url(https://cdn.discordapp.com/attachments/817410187199512678/817413426954764328/tgd-haegi-logo.png) no-repeat;
-	background-size: auto 32px;
-	width: 90px;
-}
-
-/* 검색 버튼 (검색창 없이) */
-header>#header-area>#header-search-link
-{
-	display: inline-block;
-    color: #dbde00;
-    font-size: 24;
-	padding: 0 16px 8px;
-}
-
-/* 검색 버튼 (검색 버튼 클릭 후) */
-header>#header-search-bar #header-search-btn
-{
-	display: inline-block;
-    color: #dbde00;
-    font-size: 24;
-	padding: 0 16px 8px;
-}
-
-/* 검색 창 (검색 버튼 클릭 후) */
-header > #header-search-bar #header-search-input
-{
-	position: relative;
-    border: 3px solid #dbde00;
-    background: #fff;
-    font-size: 1.1em;
-    padding: 0.3em 0.5em;
-    border-radius: 15px;
-}
-
 /* 게시판 점수 가리기 */
 #board-info #score-area
 {
 	display: none;
 }
 
-/* 접속자 수 색깔 */
+/* 접속자 수 색깔 및 글자 크기 설정 */
 #board-info #viewers-area
 {
 	color: #898685;
 	font-size: 12px;
 }
 
-/* 인원 아이콘 */
+/* 트게더 접속인원 아이콘 변경*/
 #board-info #viewers-area .fa-user:before
 {
 	content: url(https://cdn.discordapp.com/attachments/817410187199512678/817727394525216778/3_resize.png);
 }
 
-/* 인원 숫자 앞에 들어갈 문구 */
+/* 트게더 접속인원 숫자 앞에 들어갈 문구 */
 #board-info #viewers-area #viewers:before
 {
 	content: "해 바라기 ";
 	cursor: text;
 }
 
-/* 인원 숫자 뒤에 들어갈 문구 */
+/* 트게더 접속인원 숫자 뒤에 들어갈 문구 */
 #board-info #viewers-area #viewers:after
 {
 	content: " 명";
